# emdiff

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: emdiff-tests.yml
doc/: vbdiff.tex
doc/sim/: README.md  plot_results.py  simulate.py
emdiff/: __init__.py  defoc.py  em.py  le.py  plot.py  utils.py  vb.py
samples/: sample_script.py
src/emdiff/: __init__.py  defoc.py  em.py  le.py  plot.py  utils.py  vb.py
tests/: test_vbdiff.py
