[build-system]
requires = ["setuptools>42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emdiff"
version = "2.0.0"
requires-python = ">=3.7"
readme = "README.md"
authors = [
    { name = "Alec Heckert", email = "alecheckert@gmail.com" },
]
description = "EM routine for inference of discrete Brownian mixtures"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
]

[options]
packages = [
    "emdiff",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
